first commit: assignment 1

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: My Blog
 baseurl: ""
 url: "https://amencke.github.io"
 
-theme: "minimal-mistakes-jekyll"
+remote_theme: "mmistakes/minimal-mistakes@4.27.1"
 
 plugins:
   - jekyll-include-cache
