--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ remote_theme: "mmistakes/minimal-mistakes@4.27.1"
 
 plugins:
   - jekyll-remote-theme
+  - jekyll-include-cache
 
 markdown: kramdown
 kramdown:
